# qua-media-contracts

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
crates/qua-media-contracts/: Cargo.toml  README.md  build.rs
crates/qua-media-contracts/schemas/v1/: domain.schema.json
crates/qua-media-contracts/schemas/v1/examples/server/: snapshot.json  worker_heartbeat.json
crates/qua-media-contracts/src/: lib.rs
docs/: MIGRATION.md  PLAN.md
schemas/v1/examples/client/: compositor_adjust.json  submit_review.json
schemas/v1/http/: openapi.yaml
schemas/v1/ws/: client.schema.json  server.schema.json
